--- a/scGlamLiFF/package.json
+++ b/scGlamLiFF/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "@line/liff": "2.27.3",
+    "jsbarcode": "3.11.6",
+    "qrcode": "1.5.3",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-router-dom": "^6.30.3",
