--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,6 +28,7 @@ jobs:
         env:
           VITE_API_BASE_URL: https://scglamliff.onrender.com
           VITE_LIFF_ID: 2008932884-Rzo8V6B9
+          VITE_USE_MOCK: "false"
       - uses: actions/upload-pages-artifact@v3
         with:
           path: scGlamLiFF/dist
