--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -28,7 +28,7 @@ jobs:
         env:
           VITE_API_BASE_URL: https://scglamliff.onrender.com
           VITE_LIFF_ID: 2008955421-uwZ1btvE
-          VITE_USE_MOCK: "false"
+          VITE_USE_MOCK: "true"
       - uses: actions/upload-pages-artifact@v3
         with:
           path: scGlamLiFF/dist
