--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,12 +22,16 @@ jobs:
       - name: Install dependencies
         run: npm ci
         working-directory: scGlamLiFF
+      - name: Debug LIFF env (non-secret)
+        run: node -e "console.log('LIFF len=', (process.env.VITE_LIFF_ID||'').length, 'raw=', JSON.stringify(process.env.VITE_LIFF_ID))"
+        env:
+          VITE_LIFF_ID: "2008955421-uwZ1btvE"
       - name: Build
         run: npm run build
         working-directory: scGlamLiFF
         env:
           VITE_API_BASE_URL: https://scglamliff.onrender.com
-          VITE_LIFF_ID: 2008955421-uwZ1btvE
+          VITE_LIFF_ID: "2008955421-uwZ1btvE"
           VITE_USE_MOCK: "false"
       - uses: actions/upload-pages-artifact@v3
         with:
